--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="Header_wrapper">
             <header id="Header">
 
-                <div id="Top_bar">
+                <div id="Top_bar" style="display: none;">
                     <div class="container">
                         <div class="column one">
                             <div class="top_bar_left clearfix">
