--- a/Dark/index.html
+++ b/Dark/index.html
@@ -259,25 +259,22 @@
                 ></div>
                 <div class="section_wrapper mcb-section-inner">
                   <div
-                    class="wrap mcb-wrap one-second valign-top clearfix"
+                    class="wrap mcb-wrap one-third valign-top clearfix"
                     style="padding:0 4% 0 0; text-align: right"
                   >
-                    <h2 id="change-color"><span>TITLE</span></h2>
-                    <h2 id="change-color"><span>ALBUM</span></h2>
+                    <h2 id="change-color"><span>In My Room</span></h2>
+                    <h2 id="change-color"><span><i>Single</i></span></h2>
                     <br />
-                    <h3>RANDOM TEXT</h3>
-                    <h3>RANDOM TEXT</h3>
                   </div>
                   <div
-                    class="wrap mcb-wrap one-second valign-top clearfix"
-                    style="padding:0 4% 0 0"
-                  >
+                    class="wrap mcb-wrap two-third valign-top clearfix"
+                    style="padding:0 4% 0 0">
                     <iframe
                       width="100%"
                       ;
                       height="400px"
                       ;
-                      src="https://www.youtube.com/embed/watch?v=B2b1pQUqLGk"
+                      src="https://www.youtube.com/embed/3q9cuyCAvMA"
                     ></iframe>
                   </div>
                 </div>
@@ -291,7 +288,7 @@
                   style="padding-top: 75px"
                 >
                   <div
-                    class="wrap mcb-wrap one-second valign-top clearfix"
+                    class="wrap mcb-wrap two-third valign-top clearfix"
                     style="padding:0 4% 0 0"
                   >
                     <iframe
@@ -299,18 +296,16 @@
                       ;
                       height="400px"
                       ;
-                      src="https://www.youtube.com/embed/watch?v=B2b1pQUqLGk"
+                      src="https://www.youtube.com/embed/ZBOPbnxouTg"
                     ></iframe>
                   </div>
                   <div
-                    class="wrap mcb-wrap one-second valign-top clearfix"
+                    class="wrap mcb-wrap one-third valign-top clearfix"
                     style="padding:0 4% 0 0"
                   >
-                    <h2 id="change-color"><span>TITLE</span></h2>
-                    <h2 id="change-color"><span>ALBUM</span></h2>
+                    <h2 id="change-color"><span>Broken</span></h2>
+                    <h2 id="change-color"><span><i>Single</i></span></h2>
                     <br />
-                    <h3>RANDOM TEXT</h3>
-                    <h3>RANDOM TEXT</h3>
                   </div>
                 </div>
               </div>
