--- a/Dark/index.html
+++ b/Dark/index.html
@@ -928,9 +928,9 @@
         window.showVideos = function(data) {
           if (data.items && data.items.length > 0) {
             video_player_1.innerHTML =
-              '<iframe width="100%" style="pointer-events:none;"height=100%"  src="https://www.youtube.com/embed/' +
+              '<iframe width="100%" style=""height=100%"  src="https://www.youtube.com/embed/' +
               data.items[0].contentDetails.videoId +
-              '" frameborder="0" allowfullscreen></iframe>';
+              '" frameborder="0"></iframe>';
 
             video_title_1.innerHTML = data.items[0].snippet.title;
           }
