--- a/Dark/contact.html
+++ b/Dark/contact.html
@@ -213,7 +213,7 @@
                                     </p>
                                     <hr class="no_line" style="margin: 0 auto 15px;" />
                                     <p class="big">
-                                        Donec porta, metus nec lectus orci, id eros. Sed nibh eu ante. In hac habitasse platea dictumst. Quisque placerat ante. Vestibulum dapibus quam molestie sagittis.
+                                        “Music gives a soul to the universe, wings to the mind, flight to the imagination and life to everything.” ― Plato
                                     </p>
                                 </div>
                             </div>
