--- a/Dark/contact.html
+++ b/Dark/contact.html
@@ -73,7 +73,8 @@
                                     <li><a href="./video.html">Videos</a></li>
                                     <li><a href="./tour.html">Tour</a></li>
                                     <li><a href="./store.html">Store</a></li>
-                                    <li class="submenu-right current-menu"><a href="./contact.html">Socials</a></li>
+                                    <li class="current-menu"><a href="./contact.html">Socials</a></li>
+                                    <li><a></a></li>
                                 </ul>
                             </nav>
 
