--- a/Dark/index.html
+++ b/Dark/index.html
@@ -98,16 +98,15 @@
 
                 <!--Navigation menu-->
                 <nav
-                  class="navik-menu menu-caret submenu-top-border submenu-scale"
+                  class="navik-menu menu-caret submenu-top-border"
                 >
                   <ul>
                     <li><a href="./music.html">Music</a></li>
                     <li><a href="./video.html">Videos</a></li>
                     <li><a href="./tour.html">Tour</a></li>
                     <li><a href="./store.html">Store</a></li>
-                    <li class="submenu-right">
-                      <a href="./contact.html">Socials</a>
-                    </li>
+                    <li><a href="./contact.html">Socials</a></li>
+                    <li><a></a></li>
                   </ul>
                 </nav>
               </div>
