--- a/Dark/music.html
+++ b/Dark/music.html
@@ -76,7 +76,9 @@
                                     <li><a href="./video.html">Videos</a></li>
                                     <li><a href="./tour.html">Tour</a></li>
                                     <li><a href="./store.html">Store</a></li>
-                                    <li class="submenu-right"><a href="./contact.html">Socials</a></li>
+                                    <li><a href="./contact.html">Socials</a></li>
+                                    <li><a></a></li>
+
                                 </ul>
                             </nav>
 
