--- a/Dark/tour.html
+++ b/Dark/tour.html
@@ -69,7 +69,8 @@
                                     <li><a href="./video.html">Videos</a></li>
                                     <li class="current-menu"><a href="./tour.html">Tour</a></li>
                                     <li><a href="./store.html">Store</a></li>
-                                    <li class="submenu-right"><a href="./contact.html">Socials</a></li>
+                                    <li><a href="./contact.html">Socials</a></li>
+                                    <li><a></a></li>
                                 </ul>
                             </nav>
 
