--- a/Dark/index.html
+++ b/Dark/index.html
@@ -249,8 +249,8 @@
                 </div>
               </div>
               <div
-                class="section mcb-section"
-                style="padding-top:100px; padding-bottom:60px; background-color: #FFF"
+                class="section mcb-section index-size"
+                style="padding-top:100px; padding-bottom:60px; background-color: #FFF; height: auto;"
               >
                 <div
                   class="section-decoration top"
@@ -312,8 +312,8 @@
                     <div class="wrap mcb-wrap one-second  valign-top clearfix">
                         <div class="mcb-wrap-inner">
                           <div class="column mcb-column one column_blog_news ">
-                            <div class="" id="">
-                                <video width="375px" height="550px" id="" playsinline autoplay muted loop>
+                              <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-top: -90px; margin-left: -50px">
+                                  <video width="375px" height="550px" id="" playsinline autoplay muted loop>
                                     <source src="./video/video_index.mp4" type="video/mp4">
                               </video>
                             </div>
