--- a/Dark/index.html
+++ b/Dark/index.html
@@ -259,7 +259,7 @@
                 <div class="section_wrapper mcb-section-inner">
                     <div
                     class="wrap mcb-wrap one-second valign-top clearfix"
-                    style="padding:0 4% 0 0; padding-left: 20px; padding-left: 125px;"
+                    style="padding:0 4% 0 0; padding-left: 20px; padding-left: 125px; padding-bottom: 75px;"
                   >
                     <div class="mcb-wrap-inner">
                       <div
