--- a/Dark/index.html
+++ b/Dark/index.html
@@ -309,10 +309,10 @@
                       </div>
                     </div>
                   </div>
-                    <div class="wrap mcb-wrap one-second  valign-top clearfix">
+                    <div class="wrap mcb-wrap one-second  valign-top clearfix" style="padding-top: 50px; padding-left: 50px; background-color: #000;">
                         <div class="mcb-wrap-inner">
-                          <div class="column mcb-column one column_blog_news ">
-                              <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-top: -90px; margin-left: -50px">
+                          <div class="column mcb-column one column_blog_news " >
+                              <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-top: -30px; margin-left: -50px;">
                                   <video width="375px" height="550px" id="" playsinline autoplay muted loop>
                                     <source src="./video/video_index.mp4" type="video/mp4">
                               </video>
