--- a/Dark/music.html
+++ b/Dark/music.html
@@ -111,7 +111,7 @@
                             <button class="btn-music btn-music--swap" onclick="music_source('soundcloud')">Soundcloud<span>Play  Soundcloud</span></button>
                         </div>
 
-                        <div class="section_wrapper clearfix">
+                        <div class="section_wrapper clearfix" style="padding-bottom: 75px;">
                             <div class="column one column_blog">
                                 <div class="blog_wrapper isotope_wrapper" style="text-align: center">
                                     <div class="posts_group lm_wrapper grid col-4">
@@ -368,7 +368,7 @@
             </div>
         </div>
         <footer id="Footer" class="clearfix">
-            <div class="widgets_wrapper" style="padding:30px 0 15px;">
+            <div class="widgets_wrapper" style="padding-top: 30px; padding-bottom: 15px;">
                 <div class="container">
                     <div class="column one">
                         <aside class="widget widget_text">
@@ -387,7 +387,6 @@
                                     </p>
                                     <hr class="no_line" style="margin: 0 auto 15px;" />
                                     <p class="big">
-                                        “Music gives a soul to the universe, wings to the mind, flight to the imagination and life to everything.” ― Plato                                    </p>
                                 </div>
                             </div>
                         </aside>
