--- a/Dark/index.html
+++ b/Dark/index.html
@@ -10,9 +10,9 @@
   <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8" />
-    <title>Dark - Rapper</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta property="og:title" content="Dark Official Website |" />
+    <meta name="description" content="Get the latest information on Dark – Music, Album, Videos, Tour and More!" />
+        <meta name="author" content="" />
 
     <!-- Mobile Specific Mets -->
     <meta
