--- a/Dark/contact.html
+++ b/Dark/contact.html
@@ -11,8 +11,8 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Dark - Rapper</title>
-    <meta name="description" content="">
+    <meta property="og:title" content="Dark Official Website |" />
+    <meta name="description" content="Get the latest information on Dark – Music, Album, Videos, Tour and More!" />
     <meta name="author" content="">
 
     <!-- Mobile Specific Metas -->
