Updaing Header Title

--- a/Dark/music.html
+++ b/Dark/music.html
@@ -11,7 +11,7 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <meta property="og:title" content="Dark Official Website |" />
+    <meta name="title" content="Music - Dark Official Website |" />
     <meta name="description" content="Get the latest information on Dark – Music, Album, Videos, Tour and More!" />
     <meta name="author" content="">
 
