Changing HTML Title

--- a/Dark/index.html
+++ b/Dark/index.html
@@ -10,7 +10,7 @@
   <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8" />
-    <meta name="title" content="Dark Official Website |" />
+    <title>Dark Official Website |</title>
     <meta name="description" content="Get the latest information on Dark – Music, Album, Videos, Tour and More!" />
         <meta name="author" content="" />
 
