--- a/Dark/tour.html
+++ b/Dark/tour.html
@@ -11,7 +11,7 @@
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <meta name="title" content="Tour - Dark Official Website |" />
+    <title>Tour - Dark Official Website |</title>
     <meta name="description" content="Get the latest information on Dark – Music, Album, Videos, Tour and More!" />
     <meta name="author" content="">
 
