--- a/Dark/index.html
+++ b/Dark/index.html
@@ -309,11 +309,11 @@
                       </div>
                     </div>
                   </div>
-                    <div class="wrap mcb-wrap one-second  valign-top clearfix" style="padding-top: 50px; padding-left: 50px; background-color: #000;">
+                    <div class="wrap mcb-wrap one-second  valign-top clearfix" style="padding-top: 50px; padding-left: 50px;">
                         <div class="mcb-wrap-inner">
                           <div class="column mcb-column one column_blog_news " >
-                              <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-top: -30px; margin-left: -50px; height:500px; width: 500px;">
-                                  <iframe width="100%" height=100%"  src="https://www.youtube.com/embed/khawX1PsTw8" frameborder="0"></iframe>
+                              <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-top: -30px; margin-left: -50px; height:500px; width: 100%;">
+                                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/khawX1PsTw8" frameborder="0"></iframe>
                             </div>
                           </div>
                         </div>
