--- a/Dark/tour.html
+++ b/Dark/tour.html
@@ -91,16 +91,16 @@
                                 <div class="wrap mcb-wrap one valign-top clearfix" style="text-align: right; z-index: 100; padding-bottom: 0px;">
                                     <h2 style="text-align: center">Upcoming Dates</h2>
                                     
-                                    <div class="wrap mcb-wrap one-fifth valign-top clearfix" style="text-align: right; z-index: 100">
+                                    <div class="wrap mcb-wrap one-fifth valign-top clearfix" style="text-align: left; z-index: 100">
                                         <h4>DEC 13</h4>
                                     </div>
-                                    <div class="wrap mcb-wrap one-third valign-top clearfix" style="text-align: right; z-index: 100">
+                                    <div class="wrap mcb-wrap one-third valign-top clearfix" style="text-align: left; z-index: 100">
                                         <h4 style="font-size: 1.3em">
                                             Olympic Stadium <br>
                                             1234 Street Hello
                                         </h4>
                                     </div>
-                                    <div class="wrap mcb-wrap one-fifth valign-top clearfix" style="text-align: right; z-index: 100">
+                                    <div class="wrap mcb-wrap one-fifth valign-top clearfix" style="text-align: left; z-index: 100">
                                         <a href="https://google.ca">GOOGLE</a>
                                     </div>
                                     
