--- a/Dark/index.html
+++ b/Dark/index.html
@@ -316,7 +316,7 @@
                         <div class="mcb-wrap-inner">
                           <div class="column mcb-column one column_blog_news " >
                               <div class="wrap mcb-wrap one-third valign-top clearfix" id="video_style">
-                                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/khawX1PsTw8" frameborder="0"></iframe>
+                                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/khawX1PsTw8?autoplay=1" frameborder="0"></iframe>
                             </div>
                           </div>
                         </div>
