--- a/Dark/index.html
+++ b/Dark/index.html
@@ -268,8 +268,8 @@
                         class="column mcb-column one column_column column-margin-10px"
                       >
                         <div class="column_attr clearfix">
-                          <h1 style="margin-bottom: -10px; background-color: #000; width: 55%; color: #FFF;" class="tour-background">Tour</h1>
-                          <h3 id="current date" class="date-align">Date</h3>
+                          <h1 style="margin-bottom: -10px; background-color: #000; width: 50%; color: #FFF;" class="tour-background">Tour</h1>
+                          <h3 id="current date" class="date-align" style="padding-top: 10px;">Date</h3>
                           <br />
                           <div id="tour-display">
                           <h4>Previous Tour</h4>
