--- a/Dark/index.html
+++ b/Dark/index.html
@@ -274,7 +274,7 @@
                           <div id="tour-display">
                           <h3 style="text-decoration: underline;">Previous Tour</h3>
                           <h4>
-                            The Smiling Buddha </h4>
+                            The Smiling Buddha | Sep 22<sup>nd</sup></h4>
                             <h5>Self-proclaimed dive bar & event venue hosting live metal punk & hardcore music, plus comedy shows.
 
                           </h5>
