--- a/Dark/video.html
+++ b/Dark/video.html
@@ -40,6 +40,8 @@
 	<link rel="stylesheet" href="src/navik.menu.css"> <!-- Navik navigation CSS -->
 
     <link href="https://fonts.googleapis.com/css?family=Grenze:100,200,300,400&display=swap" rel="stylesheet">
+    <script src="https://apis.google.com/js/platform.js"></script>
+
 
 </head>
 
@@ -88,7 +90,7 @@
             <div id="Subheader" style="padding:5em 0 4em;">
                 <div class="container">
                     <div class="column one">
-                        <h4 class="title">Video</h4>
+                        <h4 class="title">Videos</h4>
                     </div>
                 </div>
             </div>
@@ -96,6 +98,8 @@
         <div id="Content">
             <div class="content_wrapper clearfix">
                 <div class="sections_group">
+                    <div class="g-ytsubscribe" data-channelid="UCx5wb7jzkqNGNpgymEeAd5Q" data-layout="full" data-count="default"></div>
+
                     <div id="V-Player" style="">
                             <div id="M_player_frame_1" class="V-Height"></div>
                         
