--- a/Dark/video.html
+++ b/Dark/video.html
@@ -90,7 +90,7 @@
             <div id="Subheader" style="padding:5em 0 4em;">
                 <div class="container">
                     <div class="column one">
-                        <h1 class="title" style="color: #FFF"><span style="width: 30%; background-color: #000">Video</span></h1>
+                        <h1 class="title" style="color: #FFF"><span style="width: 35%; background-color: #000">Videos</span></h1>
                     </div>
                 </div>
             </div>
