--- a/Dark/index.html
+++ b/Dark/index.html
@@ -377,9 +377,9 @@
                                     <div class="mask"></div>
                                     <i></i
                                     ><img
-                                      width="100"
-                                      height="100"
-                                      src="./images/Songs/UpAllNight.png"
+                                      width="125"
+                                      height="125"
+                                      src="./images/album_1.jpg"
                                       class="scale-with-grid wp-post-image"
                                       alt=""
                                       itemprop="image"
