--- a/Dark/index.html
+++ b/Dark/index.html
@@ -362,37 +362,38 @@
                       </div>
                     </div>
                   </div>
-                  <div class="wrap mcb-wrap one-forth  valign-top clearfix">
-                    <div class="mcb-wrap-inner">
-                      <div class="column mcb-column column_portfolio_slider">
-                        <div class="portfolio_sliders">
-                          <ul class="portfolio_slider_uls" style="margin: auto">
-                            <li>
-                              <div class="image_frame scale-with-grid">
-                                <div
-                                  class="image_wrapper"
-                                  style="border-radius: 10px"
-                                >
-                                  <a>
-                                    <div class="mask"></div>
-                                    <i></i
-                                    ><img
-                                      width="125"
-                                      height="125"
-                                      src="./images/album_1.jpg"
-                                      class="scale-with-grid wp-post-image"
-                                      alt=""
-                                      itemprop="image"
-                                    />
-                                  </a>
+                  
+                  <div class="wrap mcb-wrap one  valign-top clearfix">
+                      <div class="mcb-wrap-inner">
+                        <div class="column mcb-column column_portfolio_slider">
+                          <div class="portfolio_sliders">
+                            <ul class="portfolio_slider_uls" style="margin: auto">
+                              <li>
+                                <div class="image_frame scale-with-grid">
+                                  <div
+                                    class="image_wrapper"
+                                    style="border-radius: 10px"
+                                  >
+                                    <a>
+                                      <div class="mask"></div>
+                                      <i></i
+                                      ><img
+                                        width="125"
+                                        height="125"
+                                        src="./images/album_1.jpg"
+                                        class="scale-with-grid wp-post-image"
+                                        alt=""
+                                        itemprop="image"
+                                      />
+                                    </a>
+                                  </div>
                                 </div>
-                              </div>
-                            </li>
-                          </ul>
+                              </li>
+                            </ul>
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
                   <div
                     class="wrap mcb-wrap one-forth valign-top clearfix"
                     style="padding:0 4% 0 0; padding-left: 20px;"
@@ -402,10 +403,8 @@
                         class="column mcb-column one column_column column-margin-10px"
                       >
                         <div class="column_attr clearfix">
-                          <h4 style="margin-bottom: -10px">Listen To</h4>
-                          <h3>SONG</h3>
-                          <br />
-                          <h4>Stream Source</h4>
+                          
+                          <h4>Select Stream Source</h4>
                           <br />
                           <div
                             class="image_frame image_item no_link scale-with-grid alignnone no_border"
