--- a/Dark/index.html
+++ b/Dark/index.html
@@ -395,7 +395,7 @@
                       </div>
                     </div>
                   <div
-                    class="wrap mcb-wrap one-forth valign-top clearfix"
+                    class="wrap mcb-wrap one-third valign-top clearfix"
                     style="padding:0 4% 0 0; padding-left: 20px;"
                   >
                     <div class="mcb-wrap-inner">
