--- a/Dark/index.html
+++ b/Dark/index.html
@@ -468,7 +468,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="wrap mcb-wrap one-second  valign-top clearfix">
+                  <div class="wrap mcb-wrap one-second valign-top clearfix" style="margin-top: -165px;">
                     <div class="mcb-wrap-inner">
                       <div class="column mcb-column one column_blog_news ">
                         <div class="Latest_news" id="index_source">
