--- a/Dark/index.html
+++ b/Dark/index.html
@@ -357,8 +357,8 @@
                           class="column_attr clearfix align_center"
                           style=" padding:0 10%; padding-bottom: 50px"
                         >
-                          <h2>MUSIC</h2>
-                        </div>
+                        <h1 style="margin-bottom: -10px; background-color: #000; width: 30%; color: #FFF; margin: auto; text-align: center;" class="tour-background">Music</h1>
+                      </div>
                       </div>
                     </div>
                   </div>
@@ -404,7 +404,6 @@
                       >
                         <div class="column_attr clearfix">
                           
-                          <h4>Select Stream Source</h4>
                           <br />
                           <div
                             class="image_frame image_item no_link scale-with-grid alignnone no_border"
