--- a/Dark/index.html
+++ b/Dark/index.html
@@ -363,7 +363,7 @@
                     </div>
                   </div>
                   
-                  <div class="wrap mcb-wrap one  valign-top clearfix">
+                  <div class="wrap mcb-wrap one-fourth  valign-top clearfix">
                       <div class="mcb-wrap-inner">
                         <div class="column mcb-column column_portfolio_slider">
                           <div class="portfolio_sliders">
@@ -378,8 +378,8 @@
                                       <div class="mask"></div>
                                       <i></i
                                       ><img
-                                        width="125"
-                                        height="125"
+                                        width="175"
+                                        height="175"
                                         src="./images/album_1.jpg"
                                         class="scale-with-grid wp-post-image"
                                         alt=""
@@ -395,7 +395,7 @@
                       </div>
                     </div>
                   <div
-                    class="wrap mcb-wrap one-third valign-top clearfix"
+                    class="wrap mcb-wrap one-fourth valign-top clearfix"
                     style="padding:0 4% 0 0; padding-left: 20px;"
                   >
                     <div class="mcb-wrap-inner">
@@ -404,21 +404,6 @@
                       >
                         <div class="column_attr clearfix">
                           
-                          <br />
-                          <div
-                            class="image_frame image_item no_link scale-with-grid alignnone no_border"
-                          >
-                            <div class="image_wrapper">
-                              <img
-                                class="scale-with-grid"
-                                src="./images/home_musician_sep2.png"
-                                alt="home_musician_sep2"
-                                width="72"
-                                height="9"
-                              />
-                            </div>
-                          </div>
-                          <hr class="no_line" style="margin: 0 auto 15px;" />
                           <div style="text-align: left;" id="source-section">
                             <div>
                               <div id="source-picker" style="">
@@ -467,7 +452,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="wrap mcb-wrap one-second valign-top clearfix" style="margin-top: -165px;">
+                  <div class="wrap mcb-wrap one-second valign-top clearfix">
                     <div class="mcb-wrap-inner">
                       <div class="column mcb-column one column_blog_news ">
                         <div class="Latest_news" id="index_source">
