--- a/Dark/index.html
+++ b/Dark/index.html
@@ -61,6 +61,8 @@
       href="https://fonts.googleapis.com/css?family=Grenze:100,200,300,400&display=swap"
       rel="stylesheet"
     />
+    <script src="https://apis.google.com/js/platform.js"></script>
+
   </head>
 
   <body
@@ -455,6 +457,7 @@
                   <div class="wrap mcb-wrap one-second valign-top clearfix">
                     <div class="mcb-wrap-inner">
                       <div class="column mcb-column one column_blog_news ">
+                          <div class="g-ytsubscribe" data-channelid="UCx5wb7jzkqNGNpgymEeAd5Q" data-layout="full" data-count="default"></div>
                         <div class="Latest_news" id="index_source">
                           <iframe
                             src="https://open.spotify.com/embed/artist/6HwBvmFxQ5dErzS6UrvfPe&theme=red"
