--- a/Dark/index.html
+++ b/Dark/index.html
@@ -375,13 +375,14 @@
                       <div class="mcb-wrap-inner">
                         <div class="column mcb-column column_portfolio_slider">
                           <div class="portfolio_sliders">
-                            <ul class="portfolio_slider_uls" style="margin: auto; padding-top: 25px;">
+                            <ul class="portfolio_slider_uls" style="margin: auto; padding-top: 65px;">
                               <li>
                                 <div class="image_frame scale-with-grid">
                                   <div
                                     class="image_wrapper"
                                     style="border-radius: 10px"
                                   >
+                                  <h5>Current Album Name</h5>
                                     <a>
                                       <div class="mask"></div>
                                       <i></i
