--- a/Dark/index.html
+++ b/Dark/index.html
@@ -375,7 +375,7 @@
                       <div class="mcb-wrap-inner">
                         <div class="column mcb-column column_portfolio_slider">
                           <div class="portfolio_sliders">
-                            <ul class="portfolio_slider_uls" style="margin: auto; padding-top: 65px;">
+                            <ul class="portfolio_slider_uls" style="margin: auto; padding-top: 25px;">
                               <li>
                                 <div class="image_frame scale-with-grid">
                                   <div
@@ -407,7 +407,7 @@
                   <div class="wrap mcb-wrap one-second valign-top clearfix">
                     <div class="mcb-wrap-inner">
                       <div class="column mcb-column one column_blog_news ">
-                          <div class="wrap mcb-wrap one-third valign-top clearfix">
+                          <div class="wrap mcb-wrap one-third valign-top clearfix" style="padding-bottom:-40px!important">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
                                   <div id="source-picker" style="">
@@ -465,8 +465,8 @@
                                   </div>
                                 </div>
                           </div>
-                        <div class="Latest_news" id="index_source">
-                          <iframe
+                        <div class="Latest_news" id="index_source" >
+                          <iframe style="margin-top: -40px!important;"
                             src="https://open.spotify.com/embed/album/0XYYw1tr8R8QcErpFeCn4Q&theme=red"
                             width="100%"
                             height="400"
