--- a/Dark/index.html
+++ b/Dark/index.html
@@ -410,7 +410,7 @@
                           <div class="wrap mcb-wrap one-third valign-top clearfix" style="padding-bottom:-40px!important">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                  <div id="source-picker" style="">
+                                  <div id="source-picker" style="padding-left: -20px;">
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('spotify')"
@@ -429,7 +429,7 @@
                           <div class="wrap mcb-wrap one-third valign-top clearfix">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                    <div id="source-picker" style="">
+                                    <div id="source-picker" style="margin-left: -30px;">
                                         <button
                                           class="btn_selector btn-sep"
                                           onclick="index_source('apple');"
@@ -453,7 +453,7 @@
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('soundcloud')"
-                                        style="font-size: 30px; text-align: left; padding-left: 20px;"
+                                        style="font-size: 30px; text-align: left; padding-left: 0px;"
                                       >
                                         <i
                                           class="fa fa-soundcloud"
