--- a/Dark/index.html
+++ b/Dark/index.html
@@ -410,14 +410,14 @@
                           <div class="wrap mcb-wrap one-third valign-top clearfix" style="padding-bottom:-40px!important">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                  <div id="source-picker" style="padding-left: -20px;">
+                                  <div id="source-picker" style="padding-left: -20px;border: 5px solid #000;" class="btn_hover">
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('spotify')"
-                                        style="font-size: 30px; text-align: left"
+                                        style="font-size: 22px; text-align: left"
                                       >
                                         <i
-                                          class="fa fa-spotify"
+                                          class="fa fa-spotify fa-xs"
                                           aria-hidden="true"
                                         ></i>
                                         Spotify
@@ -429,14 +429,14 @@
                           <div class="wrap mcb-wrap one-third valign-top clearfix">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                    <div id="source-picker" style="margin-left: -30px;">
+                                    <div id="source-picker" style="padding-left: -35px;border: 5px solid #000;" class="btn_hover">
                                         <button
                                           class="btn_selector btn-sep"
                                           onclick="index_source('apple');"
-                                          style="font-size: 30px; text-align: left"
+                                          style="font-size: 22px; text-align: left"
                                         >
-                                          <i class="fa fa-apple" aria-hidden="true"></i>
-                                          Apple Music
+                                          <i class="fa fa-apple fa-xs" aria-hidden="true"></i>
+                                          Apple&nbsp;Music
                                         </button>
                                       </div>
                                   </div>
@@ -446,20 +446,20 @@
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
                                     <div
-                                    style="padding-left: 0px"
-                                      id="source-picker"
+                                    style="padding-left: 0px; border: 5px solid #000;"
+                                      id="source-picker" class="btn_hover"
                                       
                                     >
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('soundcloud')"
-                                        style="font-size: 30px; text-align: left; padding-left: 0px;"
+                                        style="font-size: 22px; text-align: left; padding-left: 0px;"
                                       >
                                         <i
-                                          class="fa fa-soundcloud"
+                                          class="fa fa-soundcloud fa-xs"
                                           aria-hidden="true"
                                         ></i>
-                                        Soundcloud
+                                        &nbsp;Soundcloud
                                       </button>
                                     </div>
                                   </div>
