--- a/Dark/index.html
+++ b/Dark/index.html
@@ -404,17 +404,17 @@
                       </div>
                     </div>
                   
-                  <div class="wrap mcb-wrap one-second valign-top clearfix">
+                  <div class="wrap mcb-wrap one-second valign-top clearfix" style="background-color: #000; padding-top: 15px; padding-left: 15px; padding-right: 15px;">
                     <div class="mcb-wrap-inner">
                       <div class="column mcb-column one column_blog_news ">
                           <div class="wrap mcb-wrap one-third valign-top clearfix" style="padding-bottom:-40px!important">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                  <div id="source-picker" style="padding-left: -20px;border: 5px solid #000;" class="btn_hover">
+                                  <div id="source-picker" style="padding-left: -20px;border: 5px solid #FFF;" class="btn_hover">
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('spotify')"
-                                        style="font-size: 22px; text-align: left"
+                                        style="font-size: 20px; text-align: left; color: #FFF;"
                                       >
                                         <i
                                           class="fa fa-spotify fa-xs"
@@ -429,11 +429,11 @@
                           <div class="wrap mcb-wrap one-third valign-top clearfix">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
-                                    <div id="source-picker" style="padding-left: -35px;border: 5px solid #000;" class="btn_hover">
+                                    <div id="source-picker" style="padding-left: -35px;border: 5px solid #FFF;" class="btn_hover">
                                         <button
                                           class="btn_selector btn-sep"
                                           onclick="index_source('apple');"
-                                          style="font-size: 22px; text-align: left"
+                                          style="font-size: 19px; text-align: left; margin-bottom: 4px; color: #FFF;"
                                         >
                                           <i class="fa fa-apple fa-xs" aria-hidden="true"></i>
                                           Apple&nbsp;Music
@@ -446,14 +446,14 @@
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
                                     <div
-                                    style="padding-left: 0px; border: 5px solid #000;"
+                                    style="padding-left: 0px; border: 5px solid #FFF; color: #FFF;"
                                       id="source-picker" class="btn_hover"
                                       
                                     >
                                       <button
                                         class="btn_selector btn-sep"
                                         onclick="index_source('soundcloud')"
-                                        style="font-size: 22px; text-align: left; padding-left: 0px;"
+                                        style="font-size: 20px; text-align: left; padding-left: 5px; margin-bottom: 2px; color: #FFF;"
                                       >
                                         <i
                                           class="fa fa-soundcloud fa-xs"
