--- a/Dark/index.html
+++ b/Dark/index.html
@@ -426,7 +426,7 @@
                                   </div>
                                 </div>
                           </div>
-                          <div class="wrap mcb-wrap one-third valign-top clearfix">
+                          <div class="wrap mcb-wrap one-third valign-top clearfix" style="margin-left: -13px;">
                               <div class="mcb-wrap-inner">
                                 <div class="column mcb-column one column_blog_news ">
                                     <div id="source-picker" style="margin-left: -3px;border: 5px solid #000;" class="btn_hover">
